tests/test_input_files/good/test_good_comment_4.punkt
main {
    #hello#const s = "hello".
    println s.
}
