tests/test_input_files/bad/test_bad_while_stmt_1.punkt
main {
	const x = 1.
	while x {
		println "hello".
	}
}
